--- a/Onymous 1.0/OnymousMobile/OnymousMobile/Views/CreatePasswordView.xaml
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile/Views/CreatePasswordView.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:behavior="clr-namespace:OnymousMobile.Behaviors"
+             xmlns:inputKit="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              x:Class="OnymousMobile.Views.CreatePasswordView"
-             BindingContext="{Binding Main, Source={StaticResource Locator}}">
+             BindingContext="{Binding Main, Source={StaticResource Locator}}"
+             BackgroundColor="{StaticResource ColorBackground}">
     <ContentView.Content>
         <StackLayout
             BindingContext="{Binding CreateAccountVM}"
@@ -23,83 +24,53 @@
             </Label>
             
             <!--ICON APLICATION-->
-            <BoxView
-                
-                BackgroundColor="#70c8d1"
+            <BoxView                
+                BackgroundColor="{StaticResource ColorPrimary}"
                 HeightRequest="70"
                 HorizontalOptions="CenterAndExpand"
                 Margin="24"
                 WidthRequest="70"/>
 
-            <!-- PASSWORD -->
+            <!-- PASSWORDS -->
             <StackLayout
-                        VerticalOptions="CenterAndExpand">
+                VerticalOptions="CenterAndExpand">
+
                 <!-- NOW PASSWORD -->
-                <Label
-                    
-                    Font="18"
-                    FontAttributes="Bold"
-                    IsVisible="{Binding IsVisiblePassword, Mode=TwoWay}"
-                    Text="Contraseña"
-                    TextColor="#70c8d1"/>
-                <Entry
-                    Grid.Column="0"
-                    IsPassword="True"
-                    Placeholder="{Binding PlaceholderPassword, Mode=TwoWay}"
-                    PlaceholderColor="#BDBCBC"
+                <inputKit:AdvancedEntry
                     Text="{Binding User.Password, Mode=TwoWay}"
-                    TextColor="White">
-                    <Entry.Behaviors>
-                        <behavior:FocusEntryBehaviors ParamEntry="Password"/>
-                        <behavior:TextChangedEntryBehavior ParamEntry="NowPassword"/>
-                    </Entry.Behaviors>
-                </Entry>
+                    IsRequired="True"
+                    Title="Contraseña"
+                    Annotation="Password"
+                    AnnotationColor="Red"
+                    ValidationMessage="*Tiene que ser mayor a 10 caracteres."
+                    IconColor="{StaticResource ColorPrimary}"
+                    IconImage="ic_lock_primary.png"
+                    MinLength="5"
+                    MaxLength="25"/>
 
                 <!-- CONFIRM PASSWORD -->
-                <Label
-                    Font="18"
-                    FontAttributes="Bold"
-                    IsVisible="{Binding IsVisibleConfirmPass, Mode=TwoWay}"
-                    Text="Confirmar contraseña"
-                    TextColor="#70c8d1"/>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+                <inputKit:AdvancedEntry
+                    Text="{Binding ConfirmPassword, Mode=TwoWay}"
+                    IsRequired="True"
+                    Title="Confirmar contraseña"
+                    Annotation="Password"
+                    AnnotationColor="Red"
+                    ValidationMessage="*Tiene que ser mayor a 10 caracteres."
+                    IconImage="ic_lock_primary.png"
+                    MinLength="5"
+                    MaxLength="25"/>
 
-                    <Entry
-                        Grid.Column="0"
-                        IsPassword="True"
-                        Placeholder="{Binding PlaceholderConfirmPass, Mode=TwoWay}"
-                        PlaceholderColor="#BDBCBC"
-                        Text="{Binding ConfirmPassword, Mode=TwoWay}"
-                        TextColor="White">
-                        <Entry.Behaviors>
-                            <behavior:FocusEntryBehaviors ParamEntry="ConfirmPass"/>
-                            <behavior:TextChangedEntryBehavior ParamEntry="NowPassword"/>
-                        </Entry.Behaviors>
-                    </Entry>
-                    <Image
-                        BackgroundColor="White"
-                        Grid.Column="1"
-                        HeightRequest="30"
-                        Source="{Binding SourceImagePassword, Mode=TwoWay}"
-                        VerticalOptions="Center"
-                        WidthRequest="30"/>
-                </Grid>
-            </StackLayout>
-
-            <StackLayout
+                <StackLayout
                 VerticalOptions="EndAndExpand">
-                <!-- NEXT -->
-                <Button
-                    BackgroundColor="White"
+                    <!-- NEXT -->
+                    <Button
+                    BackgroundColor="{StaticResource ColorWhite}"
                     BorderRadius="25"
                     Command="{Binding CommandNext}"
                     IsEnabled="{Binding IsEnabledNext, Mode=TwoWay}"
                     Text="Finalizar"
-                    TextColor="#70c8d1"/>
+                    TextColor="{StaticResource ColorPrimary}"/>
+                </StackLayout>
             </StackLayout>
         </StackLayout>
     </ContentView.Content>
