--- a/Onymous 1.0/OnymousMobile/OnymousMobile/Views/ProfilePage.xaml
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile/Views/ProfilePage.xaml
@@ -6,166 +6,8 @@
              Title="Perfil"
              Icon="ic_person_white">
     <ContentPage.Content>
-        <ScrollView>
-            <RelativeLayout
-                BindingContext="{Binding ProfileVM}">
-                <!-- BACKGROUND -->
-                <BoxView 
-                    Color="Gray"
-                    HeightRequest="100"
-                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}" />
-
-                <!-- BACKGROUND PHOTO -->
-                <BoxView
-                    BackgroundColor="Green"
-                    HeightRequest="160"
-                    WidthRequest="160"
-                    RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=.5, Constant=-80}"
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Factor=0, Property=Y, Constant=20}"/>
-                
-                <!-- USER PHOTO -->
-                <Image
-                    BackgroundColor="White"
-                    HeightRequest="150"
-                    Source="{Binding Person.Photo}"
-                    WidthRequest="150"
-                    RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0.5, Constant=-75}"
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Factor=0, Property=Y, Constant=25}">
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer
-                            Command="{Binding CommandPhoto}"/>
-                    </Image.GestureRecognizers>
-                </Image>
-
-                <!-- PERSON NAME -->
-                <Label 
-                    FontAttributes="Bold" 
-                    FontSize="22"
-                    HorizontalTextAlignment="Center"
-                    Text="{Binding Person.Name, Mode=TwoWay}"
-                    TextColor="Black"
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Y, Factor=0, Constant=185}" 
-                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            Command="{Binding CommandPersonName}"/>
-                    </Label.GestureRecognizers>
-                </Label>
-
-                <!-- MESSAGES ANSWERED -->
-                <Grid
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Y, Factor=0, Constant=210}"
-                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"
-                    HorizontalOptions="Center"
-                    Padding="24">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Image
-                        BackgroundColor="Green"
-                        HeightRequest="30"
-                        Grid.Column="0"
-                        WidthRequest="30"/>
-                    <Label
-                        Grid.Column="1"
-                        VerticalTextAlignment="Center"
-                        Text="Mensajes respondidos:"
-                        TextColor="Black"/>
-                    <Label
-                        FontAttributes="Bold"
-                        Grid.Column="2"
-                        VerticalTextAlignment="Center"
-                        Text="{Binding Person.MessageAnswered, Mode=TwoWay}"
-                        TextColor="Black"/>
-                </Grid>
-
-                <!-- MESSAGES ANONYMOUS -->
-                <Grid
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Y, Factor=0, Constant=250}"
-                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"
-                    HorizontalOptions="Center"
-                    Padding="24">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Image
-                        BackgroundColor="Green"
-                        HeightRequest="30"
-                        Grid.Column="0"
-                        WidthRequest="30"/>
-                    <Label
-                        Grid.Column="1"
-                        VerticalTextAlignment="Center"
-                        Text="Mensajes anonimos respondidos:"
-                        TextColor="Black"/>
-                    <Label
-                        FontAttributes="Bold"
-                        Grid.Column="2"
-                        VerticalTextAlignment="Center"
-                        Text="{Binding Person.MessagesAnonymous, Mode=TwoWay}"
-                        TextColor="Black"/>
-                </Grid>
-
-                <!-- TOTAL MESSAGES -->
-                <Grid
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Y, Factor=0, Constant=290}"
-                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"
-                    HorizontalOptions="Center"
-                    Padding="24">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Image
-                        BackgroundColor="Green"
-                        HeightRequest="30"
-                        Grid.Column="0"
-                        WidthRequest="30"/>
-                    <Label
-                        Grid.Column="1"
-                        VerticalTextAlignment="Center"
-                        Text="Mensajes recibidos:"
-                        TextColor="Black"/>
-                    <Label
-                        FontAttributes="Bold"
-                        Grid.Column="2"
-                        VerticalTextAlignment="Center"
-                        Text="{Binding Person.TotalMessages, Mode=TwoWay}"
-                        TextColor="Black"/>
-                </Grid>
-
-                <!-- CONFIGURATION -->
-                <Label
-                    HorizontalTextAlignment="Center"
-                    Text="Configuracion"
-                    TextColor="Green"
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Constant=-80}" 
-                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            Command="{Binding CommandConfiguration}"/>
-                    </Label.GestureRecognizers>
-                </Label>
-
-                <!-- SIGN OFF -->
-                <Label
-                    FontAttributes="Bold"
-                    HorizontalTextAlignment="Center"
-                    Text="Cerrar sesión"
-                    TextColor="Green"
-                    RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Constant=-40}" 
-                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            Command="{Binding CommandSignOff}"/>
-                    </Label.GestureRecognizers>
-                </Label>
-            </RelativeLayout>
-        </ScrollView>
+        <RelativeLayout>
+            
+        </RelativeLayout>
     </ContentPage.Content>
 </ContentPage>
