--- a/Onymous 1.0/OnymousMobile/OnymousMobile/Views/MainPage.xaml
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile/Views/MainPage.xaml
@@ -1,15 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<bnb:BottomBarPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:pages="clr-namespace:OnymousMobile.Views"
+            xmlns:bnb="clr-namespace:BottomBar.XamarinForms;assembly=BottomBar.XamarinForms"
             x:Class="OnymousMobile.Views.MainPage"
             BindingContext="{Binding Main, Source={StaticResource Locator}}"
             BarBackgroundColor="#1B2F1B">
+    <ContentPage
+        Title="Perfil"
+        Icon="ic_person_white.png"
+        bnb:BottomBarPageExtensions.TabColor="DodgerBlue">
+        <Label
+            VerticalOptions="Center"
+            HorizontalTextAlignment="Center"
+            Text="Perfil"
+            FontSize="Large"/>
+    </ContentPage>
+    
+    <ContentPage
+        Title="Buscar"
+        Icon="ic_search_white.png"
+        bnb:BottomBarPageExtensions.TabColor="Goldenrod">
+        <Label
+            VerticalOptions="Center"
+            HorizontalTextAlignment="Center"
+            Text="Buscar"
+            FontSize="Large"/>
+    </ContentPage>
+    
+    <ContentPage
+        Title="Buzón"
+        Icon="ic_message_white.png"
+        bnb:BottomBarPageExtensions.TabColor="Crimson">
+        <Label
+            VerticalOptions="Center"
+            HorizontalTextAlignment="Center"
+            Text="Buzón"
+            FontSize="Large"/>
+    </ContentPage>
     
     <!-- Pages -->
-    <TabbedPage.Children>
-        <pages:ProfilePage/>
+    <!--<TabbedPage.Children>
+        <pages:MyProfilePage/>
         <pages:SearchPage/>
         <pages:QuestionPage/>
-    </TabbedPage.Children>
-</TabbedPage>
+    </TabbedPage.Children>-->
+</bnb:BottomBarPage>
